fixed z-indexing issue

--- a/LS style.css
+++ b/LS style.css
@@ -45,7 +45,8 @@ display: flex;
   width: 100%;
   height: 20px; 
   font-family: 'Arapey', serif;
-  font-size: 20px
+  font-size: 20px;
+    z-index: 1;
 }
 
 .nav_logo {
@@ -349,7 +350,8 @@ display: flex;
   width: 100%;
   height: 20px; 
   font-family: 'Arapey', serif;
-  font-size: 20px
+  font-size: 20px;
+  z-index: 2;
 }
 
 
@@ -436,7 +438,7 @@ margin-right: auto;
   border-color: black;
   border-style: double dotted double dotted;
   filter: grayscale(100%);
-  margin: 5px;
+  margin: 7px;
 }
 
 .gallery_pics:hover{
@@ -458,4 +460,8 @@ margin-right: auto;
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
 }
+  
+  #bottom_of_page { 
+  }
+  
 }
